# spark

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
carts/: hello.p8  starfall.p8
spark-core/: Cargo.toml
spark-core/src/: audio.rs  cart.rs  console.rs  font.rs  game_state.rs  lib.rs  lua_preprocess.rs
spark-desktop/: Cargo.toml
spark-desktop/src/: audio_output.rs  editor.rs  lua_api.rs  main.rs  png_cart.rs
spark-pico/: Cargo.toml  build.rs  memory.x
spark-pico/lua/: linit.c
spark-pico/lua/compat/: assert.h  ctype.h  errno.h  float.h  limits.h  locale.h  luacompat.c  luacompat.h  math.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
spark-pico/src/: audio_out.rs  cart_baked.rs  display.rs  input.rs  lua_ffi.rs  main.rs
