[package]
name = "spark-pico"
version = "0.1.0"
edition = "2021"
description = "RP2350 firmware target for the Spark fantasy console"

[[bin]]
name = "spark-pico"
path = "src/main.rs"

[dependencies]
spark-core = { path = "../spark-core", default-features = false }
libm = "0.2"
rp235x-hal = { version = "0.4", features = ["binary-info", "critical-section-impl", "rt"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
embedded-hal-bus = "0.3"
embedded-alloc = "0.6"
mipidsi = "0.8"
embedded-graphics-core = "0.4"
display-interface-spi = "0.5"
fugit = "0.3"
panic-halt = "1.0"
critical-section = "1.2"

[build-dependencies]
cc = "1.0"

